--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,13 @@
 name: Application Workflow
 on: 
-  push:
-    branches:
-      - main
-    paths:
-      - kubernetes/*
-      - src/*
-      - Dockerfile
-      
+  # push:
+  #   branches:
+  #     - main
+  #   paths:
+  #     - kubernetes/*
+  #     - src/*
+  #     - Dockerfile
+
   workflow_dispatch:
 
 env:
@@ -21,16 +21,16 @@ jobs:
       - name: Fetch Code
         uses: actions/checkout@v4
 
+      - uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '11'
+
       - name: Maven test
         run: mvn test
 
       - name: CheckStyle analysis
         run: mvn checkstyle:checkstyle
-
-      - uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '11'
 
       - name: Setup SonarQube
         uses: warchant/setup-sonar-scanner@v7
@@ -115,13 +115,13 @@ jobs:
         run: helm lint Vpro-app-chart
                     
   
-      - name: Deploy Helm Chart
-        uses: bitovi/github-actions-deploy-eks-helm@v1.2.12
-        with:
-          aws-region: ${{ env.AWS_REGION }}
-          cluster-name: ${{ env.EKS_CLUSTER }}
-          chart-path: ./Vpro-app-chart
-          name: Actions-release-${{ github.run_number }}      
+      # - name: Deploy Helm Chart
+      #   uses: bitovi/github-actions-deploy-eks-helm@v1.2.12
+      #   with:
+      #     aws-region: ${{ env.AWS_REGION }}
+      #     cluster-name: ${{ env.EKS_CLUSTER }}
+      #     chart-path: ./Vpro-app-chart
+      #     name: Actions-release-${{ github.run_number }}      
       
       - name: Package Helm Chart
         run: |
