--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,8 @@ on:
     branches:
       - main
     paths:
-      - kubernetes/*
-      - src/*
+      - kubernetes/**
+      - src/**
       - Dockerfile
 
   workflow_dispatch:
